fix(components/query-builder): fixed escessive computations by rxjs/map #402

--- a/libs/components/src/lib/components/query-builder/query-builder.component.html
+++ b/libs/components/src/lib/components/query-builder/query-builder.component.html
@@ -1,4 +1,4 @@
-<cdk-tree [dataSource]="data" [treeControl]="treeControl">
+<cdk-tree [dataSource]="dataSource" [treeControl]="treeControl">
   <cdk-nested-tree-node
     #nodeRef="cdkNestedTreeNode"
     *cdkTreeNodeDef="let node"
