feat(components/tree-select): added checkbox position control, auto focus for checkbox and other #0

--- a/apps/doc/src/app/components/input/input-tree-multi-select/examples/projection/tree-select-projection-example.component.html
+++ b/apps/doc/src/app/components/input/input-tree-multi-select/examples/projection/tree-select-projection-example.component.html
@@ -1,4 +1,4 @@
-<prizm-input-layout label="Projection">
+<prizm-input-layout [style.--prizm-input-layout-width]="'90%'" label="Projection">
   <prizm-input-tree-multi-select
     #input
     [stringify]="stringify"
