--- a/apps/doc/src/app/components/input/input-tree-select/input-tree-select.component.html
+++ b/apps/doc/src/app/components/input/input-tree-select/input-tree-select.component.html
@@ -42,6 +42,7 @@
           [prizmDropdownMinHeight]="prizmDropdownMinHeight"
           [prizmDropdownMaxHeight]="prizmDropdownMaxHeight"
           [placeholder]="placeholder"
+          [searchPlaceholder]="searchPlaceholder"
           [searchLabel]="searchLabel"
           [emptyListTemplate]="emptyListTemplate"
           [stringify]="stringify"
@@ -202,6 +203,15 @@
         documentationPropertyMode="input"
       >
         Search Label
+      </ng-template>
+
+      <ng-template
+        [(documentationPropertyValue)]="searchPlaceholder"
+        documentationPropertyName="searchPlaceholder"
+        documentationPropertyType="string"
+        documentationPropertyMode="input"
+      >
+        Search Placeholder
       </ng-template>
 
       <!-- TODO later check in demo and uncomment    -->
