--- a/libs/components/src/lib/components/dropdowns/tree-multi-select/item/tree-multi-select-item.component.less
+++ b/libs/components/src/lib/components/dropdowns/tree-multi-select/item/tree-multi-select-item.component.less
@@ -49,4 +49,14 @@
   flex-wrap: nowrap;
   gap: 4px;
   align-items: center;
+
+  &[data--checkbox-position='after'] {
+    icon-toggle {
+      order: 1;
+    }
+
+    prizm-checkbox {
+      order: 2;
+    }
+  }
 }
