--- a/libs/components/src/lib/components/dropdowns/tree-select/tree-select-data-list-wrapper.component.html
+++ b/libs/components/src/lib/components/dropdowns/tree-select/tree-select-data-list-wrapper.component.html
@@ -8,7 +8,9 @@
         class="input-search"
         [ngModelOptions]="{ standalone: true }"
         [ngModel]="treeSelectSearchDirective.query"
+        [placeholder]="treeSelectSearchDirective.searchPlaceholder"
         (ngModelChange)="treeSelectSearchDirective.search($event)"
+        prizmAutoFocus
         prizmInput
       />
     </prizm-input-layout>
