--- a/libs/components/src/lib/components/dropdowns/tree-multi-select/item/tree-multi-select-item.component.html
+++ b/libs/components/src/lib/components/dropdowns/tree-multi-select/item/tree-multi-select-item.component.html
@@ -1,5 +1,5 @@
 <div class="item" [class.selected]="value | prizmCallFunc : isSelected$ | async">
-  <div class="icon-with-checkbox">
+  <div class="icon-with-checkbox" [attr.data--checkbox-position]="checkboxPosition">
     <prizm-checkbox
       *ngIf="isSelected(); else intermediateOtUnselectedTemplate"
       [readonly]="true"
@@ -17,6 +17,7 @@
     </ng-template>
 
     <button
+      class="icon-toggle"
       *ngIf="children.length"
       [icon]="iconTemplate"
       [class.opened]="opened"
