fix(components/tabs): contained tabs focus and hover markup correction #000

--- a/libs/components/src/lib/components/tabs/components/tab.component.less
+++ b/libs/components/src/lib/components/tabs/components/tab.component.less
@@ -132,7 +132,9 @@
 
       &:hover:not(:disabled):not(.page_active) {
         background: var(--prizm-button-ghost-hover);
-        border-right: 1px solid var(--prizm-background-stroke);
+        &:not(:focus) {
+          border-right: 1px solid var(--prizm-background-stroke);
+        }
       }
 
       &_active:not(:disabled)::after {
