feat(components/droprodown-trigger-click): new directive to trigger dropdown host and fix bug #1850

--- a/libs/components/src/lib/components/dropdowns/multi-select/input-multi-select.component.html
+++ b/libs/components/src/lib/components/dropdowns/multi-select/input-multi-select.component.html
@@ -10,8 +10,10 @@
   [dropdownStyles]="dropdownStyles"
   [dropdownClasses]="dropdownClasses"
   [ngSwitch]="layoutComponent?.outer"
+  [dropdownTriggerElement]="layoutComponent?.el?.nativeElement"
   [prizmFocusable]="true"
-  (isOpenChange)="$event && searchInputControl.setValue(''); opened$$.next($event)"
+  (isOpenChange)="$event && searchInputControl.setValue('')"
+  dropdownTrigger="click"
 >
   <input
     #focusableElementRef
@@ -113,7 +115,6 @@
       [name]="$any(iconName)"
       [class.disabled]="disabled"
       [prizmFocusable]="true"
-      (click)="safeOpenModal()"
     >
     </prizm-icons-full>
   </ng-container>
