--- a/apps/doc/src/app/components/dropdowns/dropdown-host/dropdown-host.component.html
+++ b/apps/doc/src/app/components/dropdowns/dropdown-host/dropdown-host.component.html
@@ -41,8 +41,8 @@
     <prizm-doc-demo>
       <prizm-dropdown-host
         #element
+        #dropdownTriggerClickElement="dropdownTriggerClick"
         [(isOpen)]="isOpen"
-        [prizmDocHostElement]="element"
         [content]="withHeaderAndFooter"
         [autoReposition]="autoReposition"
         [prizmDropdownHostWidth]="prizmDropdownHostWidth"
@@ -54,6 +54,9 @@
         [closeByEsc]="closeByEsc"
         [dropdownClasses]="dropdownClasses"
         [dropdownStyles]="dropdownStyles"
+        [prizmDocHostElement]="[element, dropdownTriggerClickElement]"
+        [prizmDocHostElementKey]="[key, keyForTrigger]"
+        dropdownTrigger="click"
         style="display: inline-block; width: auto"
       >
         <button (click)="isOpen = !isOpen" prizmButton type="button">Button</button>
@@ -105,7 +108,16 @@
         </prizm-data-list>
       </ng-template>
     </prizm-doc-demo>
-    <prizm-doc-documentation>
+    <prizm-doc-documentation [heading]="keyForTrigger" [hostComponentKey]="keyForTrigger" [hasTestId]="false">
+      <ng-template
+        documentationPropertyName="dropdownTriggerElement"
+        documentationPropertyType="HTMLElement"
+        documentationPropertyMode="input"
+      >
+        Element For Listen Trigger Element
+      </ng-template>
+    </prizm-doc-documentation>
+    <prizm-doc-documentation [heading]="key" [hostComponentKey]="key">
       <ng-template
         [(documentationPropertyValue)]="prizmDropdownHostWidth"
         documentationPropertyName="prizmDropdownHostWidth"
