fix(components/switcher): switcher button markup correction #2032

--- a/libs/components/src/lib/components/switcher/components/switcher-item/switcher-item.component.less
+++ b/libs/components/src/lib/components/switcher/components/switcher-item/switcher-item.component.less
@@ -13,8 +13,11 @@
 :host {
   button {
     border-radius: 0;
+
+    ::ng-deep prizm-wrapper {
+      border-radius: 0;
+    }
     &._focused {
-      border-radius: 2px !important;
       z-index: 1;
     }
   }
