feat(doc/dropdown-host): updated example select panel added custom vars for overlay #1027

--- a/apps/doc/src/app/components/dropdowns/dropdown-host/dropdown-host.component.html
+++ b/apps/doc/src/app/components/dropdowns/dropdown-host/dropdown-host.component.html
@@ -8,7 +8,11 @@
       <prizm-dropdown-host-example-with-template></prizm-dropdown-host-example-with-template>
     </prizm-doc-example>
 
-    <prizm-doc-example id="select-panel" [content]="exampleWithSelectPanel" heading="Select panel">
+    <prizm-doc-example
+      id="select-panel"
+      [content]="exampleWithSelectPanel"
+      heading="Select panel (with custom css variables)"
+    >
       <prizm-select-panel-example></prizm-select-panel-example>
     </prizm-doc-example>
 
