--- a/apps/doc/src/app/components/dropdowns/dropdown-host/examples/select-panel-example/select-panel-example.component.html
+++ b/apps/doc/src/app/components/dropdowns/dropdown-host/examples/select-panel-example/select-panel-example.component.html
@@ -2,6 +2,7 @@
   #prizmDropdownHostComponent
   [(isOpen)]="showPanel"
   [content]="dropdown"
+  [dropdownClasses]="'overlay-without-border'"
   prizmDropdownHostWidth="auto"
 >
   <button (click)="show()" prizmButton type="button">Button</button>
