--- a/apps/doc/src/app/components/dropdowns/dropdown-host/examples/select-panel-example/select-panel-example.component.less
+++ b/apps/doc/src/app/components/dropdowns/dropdown-host/examples/select-panel-example/select-panel-example.component.less
@@ -62,3 +62,9 @@
     color: #7887a5;
   }
 }
+
+// INFO only example (prefer add similarly to global style without ng-deep)
+::ng-deep prizm-overlay .overlay-without-border {
+  --prizm-dropdrown-host-border: 0;
+  --prizm-dropdrown-host-box-shadow: none;
+}
