--- a/libs/components/src/lib/components/dropdowns/multi-select/input-multi-select.component.html
+++ b/libs/components/src/lib/components/dropdowns/multi-select/input-multi-select.component.html
@@ -68,9 +68,8 @@
               class="text"
               #elem
               *prizmLet="item | prizmCallFunc : stringify : $any(emptyContent) as text"
-              [prizmHint]="text"
+              [prizmHintOnOverflow]="text"
               [prizmHintDirection]="direction"
-              [prizmHintCanShow]="$any(elem | prizmCallFunc : prizmIsTextOverflow$ | async)"
             >
               <ng-container
                 *polymorphOutlet="
