fix(components/multi-select): did not set focus #1225

--- a/apps/doc/src/app/components/dropdowns/dropdown-host/dropdown-host.component.html
+++ b/apps/doc/src/app/components/dropdowns/dropdown-host/dropdown-host.component.html
@@ -41,7 +41,7 @@
     <prizm-doc-demo>
       <prizm-dropdown-host
         #element
-        #dropdownTriggerClickElement="dropdownTriggerClick"
+        #dropdownTriggerClickElement="prizmDropdownTriggerClick"
         [(isOpen)]="isOpen"
         [content]="withHeaderAndFooter"
         [autoReposition]="autoReposition"
