--- a/libs/components/src/lib/components/input/common/input-layout/input-layout.component.less
+++ b/libs/components/src/lib/components/input/common/input-layout/input-layout.component.less
@@ -17,7 +17,8 @@
   }
 
   &:hover,
-  &:focus-within {
+  &:focus-within,
+  &.focused {
     .prizm-input-button-default {
       display: flex;
     }
