feat(doc): update information about us #0

--- a/apps/doc/src/app/about-prizm/design-system/design-system.component.html
+++ b/apps/doc/src/app/about-prizm/design-system/design-system.component.html
@@ -1,17 +1,17 @@
 <prizm-doc-page class="info-page" header="О дизайн-системе Prizm">
   <p>
-    <strong>Дизайн-система «PRIZM»</strong> представляет собой симбиоз дизайн-системы Spectr (ГПН БЛПС) и
-    дизайн-системы ZIIoT design system 3.0, учитывает специфику промышленности, где представлена платформа,
-    наш прошлый опыт и рынок, куда мы хотим попасть. Prizm распространяется по типу
+    <strong>Дизайн-система «PRIZM»</strong> – это инструмент разработчиков и дизайнеров для создания новых
+    приложений и сервисов, а также для перевода существующих на единый технологический стек. Ее цель –
+    унифицировать и структурировать процесс дизайна, обеспечить его качество и последовательность во всех
+    продуктах и на всех этапах разработки. <br />Prizm – это развитие дизайн-системы ZIIoT design system 3.0
+    (Цифра и Цифровая Индустривальная Платформа), для которого привлекались внешние эксперты из нефтегазовой
+    отрасли. <br />Prizm распространяется по типу
     <a href="{{ storybookBaseUrl }}/about-prizm/license">лицензии MIT</a> и подходит для создания цифровых
-    продуктов, включая бизнес-приложения поверх платформы ZIIoT. По сути, это единый визуальный язык и его
-    техническое отражение в виде библиотеки компонентов в одном общем хранилище. Он не имеет отношения к
-    back-end, а скорее представляет собой документ, объединяющий в себе информацию о решениях и требованиях,
-    которые должны быть использованы при разработке и обновлении частей платформы и прикладных решений на
-    ZIIoT. На него необходимо будет ссылаться при разработке технических заданий, руководств пользователя и
-    прочих документов.
+    продуктов, включая бизнес-приложения поверх платформы ZIIoT. <br />Prizm представляет собой целостный
+    визуальный язык и его техническое отражение в виде библиотеки компонентов в едином репозитории. В нее
+    входят сопутствующие дизайнерские шаблоны, набор правил и инструментов для визуального и технического
+    исполнения.
   </p>
-
   <h4>Для кого</h4>
 
   <ol class="disc">
