fix(components/input-layout): fixed bug with cursor and focus #0

--- a/libs/components/src/lib/components/dropdowns/tree-select/tree-select.component.html
+++ b/libs/components/src/lib/components/dropdowns/tree-select/tree-select.component.html
@@ -18,6 +18,7 @@
     [ngModelOptions]="{ standalone: true }"
     [ngModel]="treeSelectStringifyDirective.stringifiedSelected$ | async"
     (click)="opened$$.next(true)"
+    style="cursor: inherit"
     prizmInput
   />
 </prizm-dropdown-host>
