--- a/apps/doc/src/app/components/dropdowns/dropdown-host/dropdown-host.component.html
+++ b/apps/doc/src/app/components/dropdowns/dropdown-host/dropdown-host.component.html
@@ -63,7 +63,7 @@
         dropdownTrigger="click"
         style="display: inline-block; width: auto"
       >
-        <button (click)="isOpen = !isOpen" prizmButton type="button">Button</button>
+        <button prizmButton type="button">Button</button>
       </prizm-dropdown-host>
 
       <ng-template #withHeaderAndFooter>
