fix(doc): small grammar error in world #0

--- a/apps/doc/src/app/about-prizm/design-system/design-system.component.html
+++ b/apps/doc/src/app/about-prizm/design-system/design-system.component.html
@@ -8,7 +8,7 @@
     отрасли. <br />Prizm распространяется по типу
     <a href="{{ storybookBaseUrl }}/about-prizm/license">лицензии MIT</a> и подходит для создания цифровых
     продуктов, включая бизнес-приложения поверх платформы ZIIoT. <br />Prizm представляет собой целостный
-    визуальный язык и его техническое отражение в виде библиотеки компонентов в едином репозитории. В нее
+    визуальный язык и его техническое отражение в виде библиотеки компонентов в едином репозитории. В неё
     входят сопутствующие дизайнерские шаблоны, набор правил и инструментов для визуального и технического
     исполнения.
   </p>
