--- a/apps/doc/src/app/components/table/examples/table-server-sort-example/table-server-sort-example.component.html
+++ b/apps/doc/src/app/components/table/examples/table-server-sort-example/table-server-sort-example.component.html
@@ -1,5 +1,5 @@
 <p>Для сортировки нескольких колонок зажмите shift и кликните на иконку сортировки</p>
-<p>Для отмены сортировки на колонке нажмите на нее удерживая ctrl</p>
+<p>Для отмены сортировки на колонке нажмите на неё удерживая ctrl</p>
 
 <prizm-scrollbar class="scrollable" visibility="hidden">
   <prizm-loader [showLoader]="$any(showLoader$ | async)" [overlay]="true">
