feat(components/input-select): hide chevron when disabled #1917

--- a/libs/components/src/lib/components/dropdowns/select/input-select.component.less
+++ b/libs/components/src/lib/components/dropdowns/select/input-select.component.less
@@ -80,6 +80,10 @@
   &.active {
     color: var(--prizm-button-primary-solid-active);
   }
+
+  &.disabled {
+    visibility: hidden;
+  }
 }
 
 prizm-icon {
