feat(components/navigation): add expanded items support #1838

--- a/libs/components/src/lib/components/navigation/prizm-navigation.component.html
+++ b/libs/components/src/lib/components/navigation/prizm-navigation.component.html
@@ -9,5 +9,6 @@
     *ngIf="$any(item?.children?.length) > 0"
     [data]="$any(item)"
     [deep]="1"
+    [isExpanded]="item.isExpanded"
   ></prizm-navigation-item-expandable>
 </ng-container>
