feat(components/navigation): add icons support for non-expandable items #1477

--- a/libs/components/src/lib/components/navigation/components/prizm-navigation-item-simple/prizm-navigation-item-simple.component.html
+++ b/libs/components/src/lib/components/navigation/components/prizm-navigation-item-simple/prizm-navigation-item-simple.component.html
@@ -6,7 +6,13 @@
   [prizmHintCanShow]="prizmIsTextOverflow(title)"
   (click)="navClick()"
 >
-  <span class="nav__title" #title [style.marginLeft.px]="deep > 0 ? (deep - 1) * 24 : 0">
+  <div class="nav__icon" [style.marginLeft.px]="deep > 0 ? (deep - 1) * 12 : 0">
+    <prizm-icons-full
+      *ngIf="menuItem?.icon"
+      [name]="menuItem?.icon | prizmToType : 'string'"
+    ></prizm-icons-full>
+  </div>
+  <span class="nav__title" #title>
     {{ menuItem?.title }}
   </span>
   <div class="nav__status">
