--- a/libs/components/src/lib/components/navigation/components/prizm-navigation-item-simple/prizm-navigation-item-simple.component.less
+++ b/libs/components/src/lib/components/navigation/components/prizm-navigation-item-simple/prizm-navigation-item-simple.component.less
@@ -25,6 +25,17 @@
       text-overflow: ellipsis;
     }
 
+    &__icon {
+      height: 16px;
+      width: 16px;
+      margin: 0 8px;
+
+      display: inline-flex;
+      align-items: center;
+
+      color: var(--prizm-status-info-primary-default);
+    }
+
     &__status {
       height: 100%;
       width: 32px;
