--- a/libs/components/src/lib/components/dropdowns/tree-multi-select/item/tree-multi-select-item.component.html
+++ b/libs/components/src/lib/components/dropdowns/tree-multi-select/item/tree-multi-select-item.component.html
@@ -2,7 +2,7 @@
   <div class="icon-with-checkbox" [attr.data--checkbox-position]="checkboxPosition">
     <prizm-checkbox
       *ngIf="isSelected(); else intermediateOtUnselectedTemplate"
-      [readonly]="true"
+      [class.readonly]="true"
       [checked]="true"
     ></prizm-checkbox>
     <ng-template #intermediateOtUnselectedTemplate>
