fix(components/input-select): color in search on dark theme #0

--- a/apps/doc/src/app/components/input/input-tree-select/input-tree-select.component.html
+++ b/apps/doc/src/app/components/input/input-tree-select/input-tree-select.component.html
@@ -156,6 +156,14 @@
       </ng-template>
 
       <ng-template
+        documentationPropertyName="icon"
+        documentationPropertyType="PolymorphContent"
+        documentationPropertyMode="input"
+      >
+        Dropdown Icon
+      </ng-template>
+
+      <ng-template
         [(documentationPropertyValue)]="prizmDropdownMinHeight"
         documentationPropertyName="prizmDropdownMinHeight"
         documentationPropertyType="number"
