fix(components/multi-select): dropdown open on disabled state #0

--- a/apps/doc/src/app/components/dropdowns/dropdown-host/dropdown-host.component.html
+++ b/apps/doc/src/app/components/dropdowns/dropdown-host/dropdown-host.component.html
@@ -120,6 +120,14 @@
       >
         Element For Listen Trigger Element
       </ng-template>
+      <ng-template
+        [(documentationPropertyValue)]="disabled"
+        documentationPropertyName="dropdownDisabled"
+        documentationPropertyType="boolean"
+        documentationPropertyMode="input"
+      >
+        Disabled
+      </ng-template>
     </prizm-doc-documentation>
     <prizm-doc-documentation [heading]="key" [hostComponentKey]="key">
       <ng-template
