fix(components/polymorph): function did not invoked #0

--- a/apps/doc/src/app/tools/polymorph/polymorph.component.html
+++ b/apps/doc/src/app/tools/polymorph/polymorph.component.html
@@ -37,13 +37,12 @@
     </prizm-doc-example>
   </ng-template>
 
-  <ng-template prizmDocPageTab="Setup"
-    >>
+  <ng-template prizmDocPageTab="Setup">
     <ol class="b-demo-steps">
       <li>
         <p>
           Import
-          <code>PrizmOverlayComponent</code>
+          <code>PolymorphModule</code>
           into a module where you want to use our component
         </p>
 
