feat(components/navigation): move margin calc to pipe #1838

--- a/libs/components/src/lib/components/navigation/components/prizm-navigation-item-simple/prizm-navigation-item-simple.component.html
+++ b/libs/components/src/lib/components/navigation/components/prizm-navigation-item-simple/prizm-navigation-item-simple.component.html
@@ -6,10 +6,10 @@
   [prizmHintCanShow]="prizmIsTextOverflow(title)"
   (click)="navClick()"
 >
-  <div class="nav__icon" [style.marginLeft.px]="deep > 0 ? (deep - 1) * 12 : 0">
+  <div class="nav__icon" [style.marginLeft.px]="deep | prizmCalculateNavMargin">
     <prizm-icons-full
       *ngIf="menuItem?.icon"
-      [name]="menuItem?.icon | prizmToType : 'string'"
+      [name]="menuItem!.icon | prizmToType : 'string'"
     ></prizm-icons-full>
   </div>
   <span class="nav__title" #title>
