--- a/libs/components/src/lib/components/navigation/components/prizm-navigation-item-expandable/prizm-navigation-item-expandable.component.html
+++ b/libs/components/src/lib/components/navigation/components/prizm-navigation-item-expandable/prizm-navigation-item-expandable.component.html
@@ -6,7 +6,7 @@
     [prizmHintCanShow]="prizmIsTextOverflow(title)"
     (click)="navClick()"
   >
-    <div class="nav__icon" [style.marginLeft.px]="deep > 0 ? 8 + 16 * deep : 0">
+    <div class="nav__icon" [style.marginLeft.px]="deep | prizmCalculateNavMargin : true">
       <prizm-icons-full [name]="menuItem?.icon || 'folder'"></prizm-icons-full>
     </div>
     <span class="nav__title" #title>
