fix(components/multi-select): can open dropdwon in disabled state #0

--- a/libs/components/src/lib/components/dropdowns/tree-select/tree-select.component.html
+++ b/libs/components/src/lib/components/dropdowns/tree-select/tree-select.component.html
@@ -37,7 +37,7 @@
       [name]="$any(iconName)"
       [class.disabled]="disabled"
       [prizmFocusable]="true"
-      (click)="opened$$.next(!opened$$.value)"
+      (click)="!disabled && opened$$.next(!opened$$.value)"
     >
     </prizm-icons-full>
   </ng-container>
