--- a/libs/components/src/lib/components/input/common/input-layout/input-layout.component.less
+++ b/libs/components/src/lib/components/input/common/input-layout/input-layout.component.less
@@ -20,10 +20,12 @@
     display: none;
   }
 
-  &:hover,
-  &:focus-within {
-    .prizm-input-button-default {
-      display: flex;
+  &:not(.disabled) {
+    &:hover,
+    &:focus-within {
+      .prizm-input-button-default {
+        display: flex;
+      }
     }
   }
 }
@@ -184,18 +186,20 @@
   }
 
   // rewrite all if focused
-  &-focused,
-  &:focus-within {
-    border-color: var(--prizm-form-active);
-    box-shadow: 0 0 0 2px var(--prizm-background-stroke-focus);
-    position: relative;
+  &:not(.prizm-input-form-disabled) {
+    &-focused,
+    &:focus-within {
+      border-color: var(--prizm-form-active);
+      box-shadow: 0 0 0 2px var(--prizm-background-stroke-focus);
+      position: relative;
 
-    &:hover {
-      border-color: var(--prizm-form-active-hover);
-    }
+      &:hover {
+        border-color: var(--prizm-form-active-hover);
+      }
 
-    .prizm-input-button-default {
-      display: flex;
+      .prizm-input-button-default {
+        display: flex;
+      }
     }
   }
 
