feat(components/accrodion): replace native resize observer by hintoverflow #1414

--- a/libs/components/src/lib/components/accordion/components/accordion-item/accordion-item.component.html
+++ b/libs/components/src/lib/components/accordion/components/accordion-item/accordion-item.component.html
@@ -20,13 +20,7 @@
         <prizm-icons class="header-icon" [name]="$any(content)" size="16"></prizm-icons>
       </ng-container>
     </ng-container>
-    <div
-      class="title"
-      #elem
-      *ngIf="_title"
-      [prizmHint]="_title"
-      [prizmHintCanShow]="prizmIsTextOverflow(elem)"
-    >
+    <div class="title" #elem *ngIf="_title" [prizmHintOnOverflow]="_title" [prizmHintOnOverflowEl]="elem">
       <ng-container *polymorphOutlet="_title as content; context: data">
         {{ content }}
       </ng-container>
