--- a/apps/doc/src/app/components/buttons/button/button.component.html
+++ b/apps/doc/src/app/components/buttons/button/button.component.html
@@ -33,6 +33,10 @@
     <prizm-doc-example id="counter" [content]="exampleCounter" heading="Button with counter">
       <prizm-button-with-counter-example></prizm-button-with-counter-example>
     </prizm-doc-example>
+
+    <prizm-doc-example id="counter" [content]="exampleCounter" heading="Button with counter">
+      <prizm-button-text-overflow-example></prizm-button-text-overflow-example>
+    </prizm-doc-example>
   </ng-template>
 
   <ng-template prizmDocPageTab prizmDocHost>
