--- a/libs/components/src/lib/components/button/button.component.less
+++ b/libs/components/src/lib/components/button/button.component.less
@@ -12,6 +12,7 @@
   background: transparent;
   // TODO 5.0.0: set default min-width 120px/64px according to prizm button component description, reseach needed
   min-width: var(--prizm-button-min-width, unset);
+  white-space: nowrap;
 
   &._focus-visible {
     box-shadow: 0 0 0 2px var(--prizm-background-stroke-focus);
@@ -26,11 +27,13 @@
 
   .z-wrapper {
     min-height: inherit;
+    max-height: inherit;
   }
 
   .addSize(@size, @height, @width, @padding, @outline-padding) {
     &[data-size='@{size}'] {
       min-height: @height;
+      max-height: @height;
 
       &[prizmIconButton] {
         width: @width;
@@ -76,6 +79,8 @@
 .text {
   text-align: inherit;
   width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
 
   &:empty {
     display: none;
