--- a/libs/components/src/lib/components/input/common/input-layout/input-layout.component.less
+++ b/libs/components/src/lib/components/input/common/input-layout/input-layout.component.less
@@ -186,20 +186,18 @@
   }
 
   // rewrite all if focused
-  &:not(.prizm-input-form-disabled) {
-    &-focused,
-    &:focus-within {
-      border-color: var(--prizm-form-active);
-      box-shadow: 0 0 0 2px var(--prizm-background-stroke-focus);
-      position: relative;
+  &-focused:not(.prizm-input-form-disabled),
+  &:focus-within:not(.prizm-input-form-disabled) {
+    border-color: var(--prizm-form-active);
+    box-shadow: 0 0 0 2px var(--prizm-background-stroke-focus);
+    position: relative;
 
-      &:hover {
-        border-color: var(--prizm-form-active-hover);
-      }
+    &:hover {
+      border-color: var(--prizm-form-active-hover);
+    }
 
-      .prizm-input-button-default {
-        display: flex;
-      }
+    .prizm-input-button-default {
+      display: flex;
     }
   }
 
