fix(components/chips): focus in disabled mode set #0

--- a/libs/components/src/lib/components/dropdowns/tree-multi-select/tree-multi-select.component.html
+++ b/libs/components/src/lib/components/dropdowns/tree-multi-select/tree-multi-select.component.html
@@ -8,7 +8,7 @@
   [autoReposition]="false"
   [ngSwitch]="layoutComponent?.outer"
   [prizmFocusable]="true"
-  (isOpenChange)="opened$$.next($event)"
+  (isOpenChange)="changeParentFocusedClass($event); opened$$.next($event)"
   (click)="safeOpenModal()"
 >
   <input
