feat(doc/button): can pseudo-inputs set to null #0

--- a/apps/doc/src/app/components/buttons/button/button.component.html
+++ b/apps/doc/src/app/components/buttons/button/button.component.html
@@ -144,6 +144,7 @@
       </ng-template>
       <ng-template
         [(documentationPropertyValue)]="pseudoHovered"
+        [documentationPropertyValues]="pseudoHoveredVariants"
         documentationPropertyName="pseudoHovered"
         documentationPropertyType="boolean"
         documentationPropertyMode="input"
@@ -152,6 +153,7 @@
       </ng-template>
       <ng-template
         [(documentationPropertyValue)]="pseudoPressed"
+        [documentationPropertyValues]="pseudoHoveredVariants"
         documentationPropertyName="pseudoPressed"
         documentationPropertyType="boolean"
         documentationPropertyMode="input"
@@ -160,6 +162,7 @@
       </ng-template>
       <ng-template
         [(documentationPropertyValue)]="pseudoFocused"
+        [documentationPropertyValues]="pseudoHoveredVariants"
         documentationPropertyName="pseudoFocused"
         documentationPropertyType="boolean"
         documentationPropertyMode="input"
