--- a/apps/doc/src/app/components/input/input-password/input-password-example.component.html
+++ b/apps/doc/src/app/components/input/input-password/input-password-example.component.html
@@ -7,7 +7,23 @@
 
   <ng-template prizmDocPageTab prizmDocHost>
     <prizm-doc-demo>
-      <prizm-input-layout [label]="label" [size]="size" [status]="status" [outer]="outer">
+      <prizm-input-layout
+        #inputElement
+        [label]="label"
+        [size]="size"
+        [status]="status"
+        [outer]="outer"
+        [size]="size"
+        [label]="label"
+        [outer]="outer"
+        [border]="border"
+        [position]="inputPosition"
+        [status]="status"
+        [forceClear]="forceClear"
+        [hideClearButtonHint]="hideClearButtonHint"
+        [prizmDocHostElement]="inputElement"
+        [prizmDocHostElementKey]="'PrizmInputLayoutComponent'"
+      >
         <input
           #inputPas
           #inputPassword="prizmInputPassword"
@@ -116,6 +132,101 @@
         documentationPropertyMode="input"
       >
         Input Password
+      </ng-template>
+    </prizm-doc-documentation>
+
+    <prizm-doc-documentation
+      [heading]="'PrizmInputLayoutComponent'"
+      [hostComponentKey]="'PrizmInputLayoutComponent'"
+    >
+      <ng-template
+        [(documentationPropertyValue)]="forceClear"
+        [documentationPropertyValues]="forceClearVariants"
+        documentationPropertyName="forceClear"
+        documentationPropertyType="boolean | null"
+        documentationPropertyMode="input"
+      >
+        Show clear button
+      </ng-template>
+
+      <ng-template
+        [(documentationPropertyValue)]="hideClearButtonHint"
+        [documentationPropertyValues]="hideHintVariants"
+        documentationPropertyName="hideClearButtonHint"
+        documentationPropertyType="boolean | null"
+        documentationPropertyMode="input"
+      >
+        Hide clear button hint
+      </ng-template>
+
+      <ng-template
+        documentationPropertyName="clearButton"
+        documentationPropertyType="PolymorphContent<PrizmInputLayoutClearButtonContext>"
+        documentationPropertyMode="input"
+      >
+        Clear Button (icon or template)
+      </ng-template>
+
+      <ng-template
+        [(documentationPropertyValue)]="outer"
+        documentationPropertyName="outer"
+        documentationPropertyType="boolean"
+        documentationPropertyMode="input"
+      >
+        Outer
+      </ng-template>
+
+      <ng-template
+        [(documentationPropertyValue)]="size"
+        [documentationPropertyValues]="sizeVariants"
+        documentationPropertyName="size"
+        documentationPropertyType="PrizmInputSize"
+        documentationPropertyMode="input"
+      >
+        Size
+      </ng-template>
+
+      <ng-template
+        [(documentationPropertyValue)]="label"
+        documentationPropertyName="label"
+        documentationPropertyType="string"
+        documentationPropertyMode="input"
+      >
+        Label
+      </ng-template>
+      <ng-template
+        documentationPropertyName="clear"
+        documentationPropertyType="MouseEvent"
+        documentationPropertyMode="output"
+      >
+        Clear
+      </ng-template>
+
+      <ng-template
+        [(documentationPropertyValue)]="border"
+        documentationPropertyName="border"
+        documentationPropertyType="boolean"
+        documentationPropertyMode="input"
+      >
+        Border
+      </ng-template>
+      <ng-template
+        [(documentationPropertyValue)]="status"
+        [documentationPropertyValues]="statuses"
+        documentationPropertyName="status"
+        documentationPropertyType="PrizmInputStatus"
+        documentationPropertyMode="input"
+      >
+        Status
+      </ng-template>
+      <ng-template
+        [(documentationPropertyValue)]="inputPosition"
+        [documentationPropertyValues]="inputPositionVariants"
+        documentationPropertyName="position"
+        documentationPropertyType="PrizmInputPosition"
+        documentationPropertyMode="input"
+      >
+        Position
       </ng-template>
     </prizm-doc-documentation>
   </ng-template>
