--- a/apps/doc/src/app/components/input/input-chips/input-chips-example.component.html
+++ b/apps/doc/src/app/components/input/input-chips/input-chips-example.component.html
@@ -39,7 +39,20 @@
       <div>
         <h1>With Input Layout</h1>
         <div>
-          <prizm-input-layout label="Заголовок" size="l" status="default">
+          <prizm-input-layout
+            #inputElement
+            [label]="label"
+            [size]="size"
+            [status]="status"
+            [outer]="outer"
+            [border]="border"
+            [position]="inputPosition"
+            [status]="status"
+            [forceClear]="forceClear"
+            [hideClearButtonHint]="hideClearButtonHint"
+            [prizmDocHostElement]="inputElement"
+            [prizmDocHostElementKey]="'PrizmInputLayoutComponent'"
+          >
             <input
               [formControl]="controlText"
               (enter)="onEnter($event)"
@@ -229,6 +242,100 @@
         documentationPropertyMode="output"
       >
         Click Chip Event
+      </ng-template>
+    </prizm-doc-documentation>
+    <prizm-doc-documentation
+      [heading]="'PrizmInputLayoutComponent'"
+      [hostComponentKey]="'PrizmInputLayoutComponent'"
+    >
+      <ng-template
+        [(documentationPropertyValue)]="forceClear"
+        [documentationPropertyValues]="forceClearVariants"
+        documentationPropertyName="forceClear"
+        documentationPropertyType="boolean | null"
+        documentationPropertyMode="input"
+      >
+        Show clear button
+      </ng-template>
+
+      <ng-template
+        [(documentationPropertyValue)]="hideClearButtonHint"
+        [documentationPropertyValues]="hideHintVariants"
+        documentationPropertyName="hideClearButtonHint"
+        documentationPropertyType="boolean | null"
+        documentationPropertyMode="input"
+      >
+        Hide clear button hint
+      </ng-template>
+
+      <ng-template
+        documentationPropertyName="clearButton"
+        documentationPropertyType="PolymorphContent<PrizmInputLayoutClearButtonContext>"
+        documentationPropertyMode="input"
+      >
+        Clear Button (icon or template)
+      </ng-template>
+
+      <ng-template
+        [(documentationPropertyValue)]="outer"
+        documentationPropertyName="outer"
+        documentationPropertyType="boolean"
+        documentationPropertyMode="input"
+      >
+        Outer
+      </ng-template>
+
+      <ng-template
+        [(documentationPropertyValue)]="size"
+        [documentationPropertyValues]="sizeVariants"
+        documentationPropertyName="size"
+        documentationPropertyType="PrizmInputSize"
+        documentationPropertyMode="input"
+      >
+        Size
+      </ng-template>
+
+      <ng-template
+        [(documentationPropertyValue)]="label"
+        documentationPropertyName="label"
+        documentationPropertyType="string"
+        documentationPropertyMode="input"
+      >
+        Label
+      </ng-template>
+      <ng-template
+        documentationPropertyName="clear"
+        documentationPropertyType="MouseEvent"
+        documentationPropertyMode="output"
+      >
+        Clear
+      </ng-template>
+
+      <ng-template
+        [(documentationPropertyValue)]="border"
+        documentationPropertyName="border"
+        documentationPropertyType="boolean"
+        documentationPropertyMode="input"
+      >
+        Border
+      </ng-template>
+      <ng-template
+        [(documentationPropertyValue)]="status"
+        [documentationPropertyValues]="statuses"
+        documentationPropertyName="status"
+        documentationPropertyType="PrizmInputStatus"
+        documentationPropertyMode="input"
+      >
+        Status
+      </ng-template>
+      <ng-template
+        [(documentationPropertyValue)]="inputPosition"
+        [documentationPropertyValues]="inputPositionVariants"
+        documentationPropertyName="position"
+        documentationPropertyType="PrizmInputPosition"
+        documentationPropertyMode="input"
+      >
+        Position
       </ng-template>
     </prizm-doc-documentation>
   </ng-template>
