feat(components/switcher): add example for overflow #1365

--- a/apps/doc/src/app/components/switcher/switcher-example.component.html
+++ b/apps/doc/src/app/components/switcher/switcher-example.component.html
@@ -51,6 +51,10 @@
       <prizm-switcher-with-icon-example></prizm-switcher-with-icon-example>
     </prizm-doc-example>
 
+    <prizm-doc-example id="overflow" [content]="exampleOverflow" heading="Switcher overflow">
+      <prizm-switcher-overflow-example></prizm-switcher-overflow-example>
+    </prizm-doc-example>
+
     <prizm-doc-example
       id="onlyIcon"
       [content]="exampleOnlyIconSwitcher"
