fix(components/query-builder): fixed scroll may appear in drag-preview #402

--- a/libs/components/src/lib/components/query-builder/query-builder.component.html
+++ b/libs/components/src/lib/components/query-builder/query-builder.component.html
@@ -18,6 +18,7 @@
     [attr.aria-level]="level + 1"
     [cdkDragData]="node"
     [cdkDragDisabled]="level === 0 || disabled"
+    (cdkDragStarted)="_onDragStarted($event)"
     (cdkDragDropped)="_onDropped($event)"
     cdkDrag
     aria-role="treeitem"
