--- a/apps/doc/src/app/components/query-builder/query-builder-example.component.html
+++ b/apps/doc/src/app/components/query-builder/query-builder-example.component.html
@@ -18,32 +18,23 @@
 
   <ng-template prizmDocPageTab prizmDocHost>
     <prizm-doc-demo>
-      <prizm-query-builder
-        [formControl]="control"
-        [disabled]="disabled"
-        [style.--prizm-input-layout-width]="prizmInputLayoutWidth"
-        [style.--prizm-query-builder-node-width]="prizmQueryBuilderNodeWidth"
-        prizmDocHostElementKey="PrizmQueryBuilderComponent"
-      >
-        <ng-template [prizmCondition] [prizmConditionPrepare]="prepare" let-condition>
-          <div
-            [style.--prizm-input-layout-width]="prizmInputLayoutWidth"
-            style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 0.5rem"
-          >
-            <prizm-input-layout [size]="'m'">
-              <input [formControl]="condition.field" prizmInput />
-            </prizm-input-layout>
+      <section style="container-type: inline-size">
+        <prizm-query-builder
+          [formControl]="control"
+          [disabled]="disabled"
+          [style.--prizm-input-layout-width]="prizmInputLayoutWidth"
+          [style.--prizm-query-builder-node-width]="prizmQueryBuilderNodeWidth"
+          prizmDocHostElementKey="PrizmQueryBuilderComponent"
+        >
+          <ng-template [prizmCondition] [prizmConditionPrepare]="prepare" let-condition>
+            <ng-container
+              *ngTemplateOutlet="template ?? prizmInputs; context: { $implicit: condition }"
+            ></ng-container>
+          </ng-template>
+        </prizm-query-builder>
+      </section>
 
-            <prizm-input-layout [size]="'m'">
-              <input [formControl]="condition.operator" prizmInput />
-            </prizm-input-layout>
-
-            <prizm-input-layout [size]="'m'">
-              <input [formControl]="condition.value" prizmInput />
-            </prizm-input-layout>
-          </div>
-        </ng-template>
-      </prizm-query-builder>
+      <span>{{ stringify(control.value) }}</span>
     </prizm-doc-demo>
 
     <prizm-doc-documentation
@@ -56,7 +47,7 @@
         [documentationPropertyValues]="expressions"
         (documentationPropertyValueChange)="control.setValue($event)"
         documentationPropertyName="expression"
-        documentationPropertyType="'ExpressionModel'"
+        documentationPropertyType="ExpressionModel"
         documentationPropertyMode="input"
       >
         Change associated expression value
@@ -81,17 +72,18 @@
         [(documentationPropertyValue)]="prepare"
         [documentationPropertyValues]="preparePresets"
         documentationPropertyName="prepare"
-        documentationPropertyType="'ConditionPrepareFn'"
+        documentationPropertyType="ConditionPrepareFn"
         documentationPropertyMode="input"
       >
-        Condition node associated data `init` hook
+        Condition node associated data `init` hook. Use it to configure node's related form controls (set
+        default values, apply/remove validators, etc.).
       </ng-template>
 
       <ng-template
-        [documentationPropertyValues]="[]"
-        (documentationPropertyValueChange)="control.setValue($event)"
+        [documentationPropertyValues]="[nativeInputs, prizmInputs, prizmInputSelect]"
+        (documentationPropertyValueChange)="template = $event"
         documentationPropertyName="template"
-        documentationPropertyType="'TemplateRef'"
+        documentationPropertyType="TemplateRef"
       >
         Condition node template
       </ng-template>
@@ -113,6 +105,12 @@
 
       <ng-template
         [(documentationPropertyValue)]="prizmQueryBuilderNodeWidth"
+        [documentationPropertyValues]="[
+          'initial',
+          'fit-content',
+          '60%',
+          'calc(100cqw - (8px + 32px + 8px + 2px) * 3 - 32px)'
+        ]"
         documentationPropertyName="--prizm-query-builder-node-width"
         documentationPropertyType="string"
         documentationPropertyMode="css-var"
@@ -135,3 +133,54 @@
     </ol>
   </ng-template>
 </prizm-doc-page>
+
+<ng-template #nativeInputs let-condition>
+  <div
+    [style.--prizm-input-layout-width]="prizmInputLayoutWidth"
+    style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 0.5rem"
+  >
+    <input [formControl]="condition.field" />
+
+    <input [formControl]="condition.operator" />
+
+    <input [formControl]="condition.value" />
+  </div>
+</ng-template>
+
+<ng-template #prizmInputs let-condition>
+  <div
+    [style.--prizm-input-layout-width]="prizmInputLayoutWidth"
+    style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 0.5rem"
+  >
+    <prizm-input-layout [size]="'m'">
+      <input [formControl]="condition.field" prizmInput />
+    </prizm-input-layout>
+
+    <prizm-input-layout [size]="'m'">
+      <input [formControl]="condition.operator" prizmInput />
+    </prizm-input-layout>
+
+    <prizm-input-layout [size]="'m'">
+      <input [formControl]="condition.value" prizmInput />
+    </prizm-input-layout>
+  </div>
+</ng-template>
+
+<ng-template #prizmInputSelect let-condition>
+  <div
+    [style.--prizm-input-layout-width]="prizmInputLayoutWidth"
+    style="display: grid; grid-template-columns: 1fr 20ch 1fr; gap: 0.5rem"
+  >
+    <prizm-input-layout [size]="'m'">
+      <prizm-input-select [formControl]="condition.field" [items]="fieldOptions" />
+    </prizm-input-layout>
+
+    <prizm-input-layout [size]="'m'">
+      <prizm-input-select [formControl]="condition.operator" [items]="operatorOptions" />
+    </prizm-input-layout>
+
+    <prizm-input-layout [size]="'m'">
+      <input [formControl]="condition.value" prizmInput />
+    </prizm-input-layout>
+  </div>
+</ng-template>
