fix(components/query-builder): drop list caches zero height leading to impossible drop #402

--- a/libs/components/src/lib/components/query-builder/query-builder.component.less
+++ b/libs/components/src/lib/components/query-builder/query-builder.component.less
@@ -73,7 +73,7 @@ prizm-data-list {
 .cdk-drop-list {
   min-height: 1rem;
 
-  &:not(.cdk-drop-list-receiving):empty {
+  &:not(.cdk-drop-list-receiving):not(.cdk-drop-list-dragging):empty {
     display: none;
   }
 }
