fix(components/query-builder): fixed issue that item cannot be sorted(moved) in nested nodes #402

--- a/libs/components/src/lib/components/query-builder/query-builder.component.html
+++ b/libs/components/src/lib/components/query-builder/query-builder.component.html
@@ -125,7 +125,7 @@
         }
       </div>
 
-      <div [cdkDropListData]="node" [cdkDropListConnectedTo]="_orderedDropLists()" cdkDropList>
+      <div [cdkDropListData]="node" [cdkDropListConnectedTo]="dropLists()" cdkDropList>
         @for(childNode of node.children; track childNode) {
         <ng-container
           *ngTemplateOutlet="nodeTemplate; context: { $implicit: childNode, level: level + 1 }"
