--- a/apps/doc/src/app/components/input/input-layout-date-time-range/examples/native-date/input-native-date-time-range-base-example.component.html
+++ b/apps/doc/src/app/components/input/input-layout-date-time-range/examples/native-date/input-native-date-time-range-base-example.component.html
@@ -2,6 +2,6 @@
   <prizm-input-layout-date-time-range [formControl]="value"> </prizm-input-layout-date-time-range>
 </prizm-input-layout>
 <div *ngIf="value.value as value">
-  <div><b>start</b>: {{ value?.[0] && (value[0] | date : 'shortDate') }}</div>
-  <div><b>end</b>: {{ value?.[1] && (value[1] | date : 'shortDate') }}</div>
+  <div><b>start</b>: {{ value?.[0] && (value[0] | date : 'long') }}</div>
+  <div><b>end</b>: {{ value?.[1] && (value[1] | date : 'long') }}</div>
 </div>
