feat(components/time-picker): add primitives in progress #2103

--- a/libs/components/src/lib/components/time-picker/time-picker.component.html
+++ b/libs/components/src/lib/components/time-picker/time-picker.component.html
@@ -1,1 +1,4 @@
-Here will be time picker soon
+<div class="" picker-host>
+  <prizm-primitive-time-pagination></prizm-primitive-time-pagination>
+  <prizm-primitive-time-picker></prizm-primitive-time-picker>
+</div>
