--- a/apps/doc/src/app/components/buttons/icon-button/icon-button.component.html
+++ b/apps/doc/src/app/components/buttons/icon-button/icon-button.component.html
@@ -4,6 +4,16 @@
     such as submitting a form, opening a dialog, canceling an action, or performing a delete operation.
   </div>
   <ng-template prizmDocPageTab>
+    <h2>
+      <ng-container *prizmIfLang="'russian'; else eng"> Используемый пакет иконок </ng-container>
+      <ng-template #eng> Icon pack used </ng-template>
+    </h2>
+
+    <div>
+      <ol>
+        <li>[prizmIconButton]button (PrizmIconsFullRegistry)</li>
+      </ol>
+    </div>
     <prizm-doc-example id="base" [content]="exampleIcons" heading="Icons">
       <prizm-icons-buttons-example></prizm-icons-buttons-example>
     </prizm-doc-example>
@@ -104,6 +114,7 @@
       </ng-template>
       <ng-template
         [(documentationPropertyValue)]="pseudoHovered"
+        [documentationPropertyValues]="pseudoHoveredVariants"
         documentationPropertyName="pseudoHovered"
         documentationPropertyType="boolean"
         documentationPropertyMode="input"
@@ -112,6 +123,7 @@
       </ng-template>
       <ng-template
         [(documentationPropertyValue)]="pseudoPressed"
+        [documentationPropertyValues]="pseudoHoveredVariants"
         documentationPropertyName="pseudoPressed"
         documentationPropertyType="boolean"
         documentationPropertyMode="input"
@@ -120,6 +132,7 @@
       </ng-template>
       <ng-template
         [(documentationPropertyValue)]="pseudoFocused"
+        [documentationPropertyValues]="pseudoHoveredVariants"
         documentationPropertyName="pseudoFocused"
         documentationPropertyType="boolean"
         documentationPropertyMode="input"
@@ -182,7 +195,7 @@
       <li>
         <p>
           Import
-          <code>PrizmButtonModule</code>
+          <code>PrizmButtonComponent</code>
           into a module where you want to use our component
         </p>
 
